Changed application.properties to remote

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+#spring.application.name=testApp
+#spring.datasource.name=test
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=123
+#spring.jpa.hibernate.ddl-auto=update
+#springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+
 spring.application.name=testApp
-spring.datasource.name=test
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.name=Remote-PostgreSQL
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=ZzjiclgatkaSydhMfItclBQdkqtgJkPG
 spring.jpa.hibernate.ddl-auto=update
 springdoc.swagger-ui.path=/swagger-ui-custom.html
